@@ -8,6 +8,7 @@ signature THY_OUTPUT =
 sig
   val display: bool Config.T
   val quotes: bool Config.T
+  val margin: int Config.T
   val indent: int Config.T
   val source: bool Config.T
   val break: bool Config.T
@@ -31,6 +32,7 @@ sig
   val str_of_source: Token.src -> string
   val maybe_pretty_source: (Proof.context -> 'a -> Pretty.T) -> Proof.context ->
     Token.src -> 'a list -> Pretty.T list
+  val string_of_margin: Proof.context -> Pretty.T -> string
   val output: Proof.context -> Pretty.T list -> string
   val verbatim_text: Proof.context -> string -> string
   val old_header_command: Input.source -> Toplevel.transition -> Toplevel.transition
@@ -46,6 +48,7 @@ struct
 val display = Attrib.setup_option_bool ("thy_output_display", @{here});
 val break = Attrib.setup_option_bool ("thy_output_break", @{here});
 val quotes = Attrib.setup_option_bool ("thy_output_quotes", @{here});
+val margin = Attrib.setup_option_int ("thy_output_margin", @{here});
 val indent = Attrib.setup_option_int ("thy_output_indent", @{here});
 val source = Attrib.setup_option_bool ("thy_output_source", @{here});
 val modes = Attrib.setup_option_string ("thy_output_modes", @{here});
@@ -108,9 +111,8 @@ fun print_antiquotations ctxt =
     val option_names = map #1 (Name_Space.markup_table ctxt options);
   in
     [Pretty.big_list "document antiquotations:" (map Pretty.mark_str command_names),
-      Pretty.big_list "document antiquotation options:" (map Pretty.mark_str option_names)]
-    |> Pretty.writeln_chunks
-  end;
+     Pretty.big_list "document antiquotation options:" (map Pretty.mark_str option_names)]
+  end |> Pretty.writeln_chunks;
 
 fun antiquotation name scan body =
   add_command name
@@ -471,7 +473,7 @@ val _ = Theory.setup
   add_option @{binding break} (Config.put break o boolean) #>
   add_option @{binding quotes} (Config.put quotes o boolean) #>
   add_option @{binding mode} (add_wrapper o Print_Mode.with_modes o single) #>
-  add_option @{binding margin} (add_wrapper o setmp_CRITICAL Pretty.margin_default o integer) #>
+  add_option @{binding margin} (Config.put margin o integer) #>
   add_option @{binding indent} (Config.put indent o integer) #>
   add_option @{binding source} (Config.put source o boolean) #>
   add_option @{binding goals_limit} (Config.put Goal_Display.goals_limit o integer));
@@ -551,15 +553,18 @@ fun maybe_pretty_source pretty ctxt src xs =
   map (pretty ctxt) xs  (*always pretty in order to exhibit errors!*)
   |> (if Config.get ctxt source then K [pretty_text ctxt (str_of_source src)] else I);
 
+fun string_of_margin ctxt = Pretty.string_of_margin (Config.get ctxt margin);
+
 fun output ctxt prts =
   prts
   |> Config.get ctxt quotes ? map Pretty.quote
   |> (if Config.get ctxt display then
-        map (Output.output o Pretty.string_of o Pretty.indent (Config.get ctxt indent))
+        map (Pretty.indent (Config.get ctxt indent) #> string_of_margin ctxt #> Output.output)
         #> space_implode "\\isasep\\isanewline%\n"
         #> enclose "\\begin{isabelle}%\n" "%\n\\end{isabelle}"
       else
-        map (Output.output o (if Config.get ctxt break then Pretty.string_of else Pretty.str_of))
+        map ((if Config.get ctxt break then string_of_margin ctxt else Pretty.str_of) #>
+          Output.output)
         #> space_implode "\\isasep\\isanewline%\n"
         #> enclose "\\isa{" "}");
 
@@ -571,11 +576,12 @@ fun output ctxt prts =
 
 local
 
-fun basic_entities name scan pretty = antiquotation name scan
-  (fn {source, context, ...} => output context o maybe_pretty_source pretty context source);
+fun basic_entities name scan pretty =
+  antiquotation name scan (fn {source, context, ...} =>
+    output context o maybe_pretty_source pretty context source);
 
-fun basic_entities_style name scan pretty = antiquotation name scan
-  (fn {source, context, ...} => fn (style, xs) =>
+fun basic_entities_style name scan pretty =
+  antiquotation name scan (fn {source, context, ...} => fn (style, xs) =>
     output context
       (maybe_pretty_source (fn ctxt => fn x => pretty ctxt (style, x)) context source xs));
 
@@ -612,9 +618,10 @@ fun proof_state state =
   | _ => error "No proof state");
 
 fun goal_state name main = antiquotation name (Scan.succeed ())
-  (fn {state, context = ctxt, ...} => fn () => output ctxt
-    [Goal_Display.pretty_goal
-      (Config.put Goal_Display.show_main_goal main ctxt) (proof_state state)]);
+  (fn {state, context = ctxt, ...} => fn () =>
+    output ctxt
+      [Goal_Display.pretty_goal
+        (Config.put Goal_Display.show_main_goal main ctxt) (proof_state state)]);
 
 in
 
